--- a/.github/workflows/deploy-github-page.yml
+++ b/.github/workflows/deploy-github-page.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Create CNAME
         run: echo -e 'turbo-repo.cn\nturbo-pack.cn' > out/CNAME
 
+      - name: Create .nojekyll
+        run: touch out/.nojekyll
+
       - name: Push branch
         uses: crazy-max/ghaction-github-pages@v2
         with:
