--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Jared Palmer",
   "license": "MPL-2.0",
   "dependencies": {
+    "@types/react":"^18.2.0",
     "@headlessui/react": "^1.7.3",
     "@heroicons/react": "1.0.6",
     "@mdx-js/react": "^2.1.4",
